ref #112 - Infographics update, fixed wrapping as well as sizing control

--- a/scss/partials/_infographics.scss
+++ b/scss/partials/_infographics.scss
@@ -1,13 +1,15 @@
 .badge {
   &.infographic {
     width: 100%;
+    white-space: normal;
   }
 
   .statcard-number {
-    font-size: 350%;
+    letter-spacing: .125rem;
   }
 
   .infographic-label {
     letter-spacing: .125em;
+    line-height: 1.5
   }
 }
